etc/openshift/spring-petclinic.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-petclinic
spec:
  selector:
    matchLabels:
      app: spring-petclinic
  
  template:
    metadata:
      labels:
        app: spring-petclinic
    spec:
      containers:
        -
          image: zokusai/spring-clinic:latest
          name: spring-petclinic
---
