etc/openshift/svc.yml
apiVersion: v1
kind: Service
metadata: 
  name: spring-petclinic
spec:
  ports: 
    - port: 80
      targetPort: 8080
  selector:
    app: spring-petclinic
