etc/openshift/netpol.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: spring-petclinic
spec:
  ingress: 
    -
      ports: 
        -
          port: 8080
  podSelector:
    matchLabels:
      app: spring-petclinic
